2018-01-21 Jana Mendrok  <jana.mendrok@gmail.com>

	* arts-2-3-935

	* src/m_rt4.cc, methods.cc (RT4Calc),
	src/rt4.[cc,h] (run_rt4, par_optpropCalc2):
	Start applying new scattering particle optical property calculation
	scheme. So far as option to RT4Calc. So far separately per freq point.

	* src/optproperties.[cc,h] (opt_prop_ScatSpecBulk):
	Changed pnds type from const MatrixView& to ConstMatrixView due to
	complaints by par_optpropCalc2.

	* src/m_basic_types.cc, methods.cc (CompareRelative):
	Introduced Tensor7 flavour for doit_i_field comparison.

	* controlfiles/artscomponents/polradtran/TestRT4.arts:
	Added a RT4Calc using new optprop scheme. Compare to old one. Results
	are practically identical, new marginally faster.

2018-01-19 Jana Mendrok  <jana.mendrok@gmail.com>

	* arts-2-3-934

	Ooops. Parts of ChangeLog missed.

	* src/m_optproperties.cc, methods.cc (TestScatDataInterp):
	Deactivated DOIT testing (needs proper adaptation to changes of
	DoitScatteringDataPrepare in arts-2-3-658).

2018-01-19 Jana Mendrok  <jana.mendrok@gmail.com>

	* arts-2-3-933

	* src/optproperties.cc (opt_prop_ScatSpecBulk, opt_prop_NScatElems,
	opt_prop_1ScatElem):
	Bugfixes.

	* src/optproperties.h (opt_prop_NScatElems, opt_prop_1ScatElem):
	Set defaults for temperature interpolation order (linear).

	* src/m_optproperties.cc, methods.cc (TestScatDataInterp):
	Revive this WSM as I need it to test the new system.
	Fixed bugs and incomplete revision, removed counterproductive input
	parameters introduced in arts-2-3-658 and arts-2-3-757 (guys... >:-/
	bad style!).
	Added section testing ext/abs extraction using new unified system.

2018-01-18  Richard Larsson <ric.larsson@gmail.com>

	* arts-2-3-932
	
	* src/m_linemixing.cc:  Added error-coding that prints errors to
	screen at out1-level.  Relmat reports type of error.
	
	* 3rdparty/wigxjpf:  Attempt to add this library to ARTS because
	we could use a faster wigner-calculator in relmat.  It presently