@@ -19,11 +19,26 @@
 #include "rational.h"
 #include <cmath>
 
-Numeric wigner3j(const Rational j1,const Rational j2,const Rational j3,
-                 const Rational m1,const Rational m2,const Rational m3);
+extern "C"
+{
+  void wig_table_init(int, int);
+  void wig_temp_init(int);
+  void wig_temp_free();
+  void wig_table_free();
+  double wig3jj(int, int, int, int, int, int);
+  double wig6jj(int, int, int, int, int, int);
+  double wig9jj(int, int, int, int, int, int, int, int, int);
+}
+
+Numeric wigner3j(const Rational j1, const Rational j2, const Rational j3,
+                 const Rational m1, const Rational m2, const Rational m3);
 
 Numeric wigner6j(const Rational j1,const Rational j2,const Rational j3,
                  const Rational l1,const Rational l2,const Rational l3);
+
+Numeric wigner9j(const Rational j11,const Rational j12,const Rational j13,
+                 const Rational j21,const Rational j22,const Rational j23,
+                 const Rational j31,const Rational j32,const Rational j33);
 
 Numeric ECS_wigner(Rational L, Rational Nl, Rational Nk, 
                    Rational Jk_lower, Rational Jl_lower, 
